# opengl-engine-base

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
basics/: camera.cpp  camera.h
basics/camera/: Camera.cpp  Camera.h
basics/shader/: basicShader.vert
engine/basics/shader/: basicShader.frag
engine/dependencies/imgui/docs/: CHANGELOG.txt  FAQ.md
engine/pch/: pch.h
engine/utils/: Shader.h  Texture.cpp  Window.cpp  common.cpp  common.h
pch/: pch.h
utils/: Shader.cpp  Shader.h  Texture.h  Window.cpp  Window.h  common.cpp  common.h
